--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
  
- <canvas id="canvas" width="600" height="1200"></canvas>
+ <canvas id="canvas" width="600" height="750"></canvas>
  <script type="text/javascript" src="background.js"></script>
-
+ <script type="text/javascript" src="enemy2.js"></script>
+ <script type="text/javascript" src="score.js"></script>
  <script type="text/javascript" src="player.js"></script>
  <script type="text/javascript" src="obstacles.js"></script>
  <script type="text/javascript" src="game.js"></script>
