--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -9,14 +9,15 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
- 
- <canvas id="canvas" width="600" height="750"></canvas>
- <script type="text/javascript" src="background.js"></script>
- <script type="text/javascript" src="enemy2.js"></script>
- <script type="text/javascript" src="score.js"></script>
- <script type="text/javascript" src="player.js"></script>
- <script type="text/javascript" src="obstacles.js"></script>
- <script type="text/javascript" src="game.js"></script>
+ <containter id="canvas-container">
+  <canvas id="canvas" width="600" height="750"></canvas>
+  <script type="text/javascript" src="background.js"></script>
+  <script type="text/javascript" src="enemy2.js"></script>
+  <script type="text/javascript" src="score.js"></script>
+  <script type="text/javascript" src="player.js"></script>
+  <script type="text/javascript" src="obstacles.js"></script>
+  <script type="text/javascript" src="game.js"></script>
+ </containter>
 
  <script type="text/javascript" src="index.js"></script>
 </body>  
