--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -7,18 +7,42 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
- <containter id="canvas-container">
-  <canvas id="canvas" width="600" height="750"></canvas>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <script type="text/javascript" src="background.js"></script>
   <script type="text/javascript" src="enemy2.js"></script>
   <script type="text/javascript" src="score.js"></script>
   <script type="text/javascript" src="player.js"></script>
   <script type="text/javascript" src="obstacles.js"></script>
   <script type="text/javascript" src="game.js"></script>
- </containter>
+  <script type="text/javascript" src="index.js"></script>
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-2">
+            <img src= "./images/surforange.jpg" class="surf" >
+          </div>
+          <div class="col-sm-8">
+              <canvas id="canvas" width="600" height="750"></canvas>
 
- <script type="text/javascript" src="index.js"></script>
+          </div>
+          <div class="col-sm-2">
+              <img src= "./images/surforange.jpg" class="surf" > 
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="jumbotron">
+          <h1 class="display-4">Hello, world!</h1>
+          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          <hr class="my-4">
+          <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+          <a class="btn btn-primary btn-lg start" href="#" role="button">Learn more</a>
+        </div>
+
+       -->
+ 
+ 
+
 </body>  
 </html>
