--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -26,7 +26,9 @@
           </div>
           <div class="col-sm-8">
               <canvas id="canvas" width="600" height="750"></canvas>
-
+              <div id="game-over"><h2>GAME OVER</h2> <p>Press space to restart</p> </div>
+              <div id="start"><h2>Iron-Surfer</h2> <button type="button" class="btn btn-primary " id="empieza">Start</button><p>Press START</p> </div>
+              
           </div>
           <div class="col-sm-2">
               <img src= "./images/surforange.jpg" class="surf" > 
